k3s-userapps/lobechat/searxng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: searxng
    spec:
      volumes:
          - name: searxng-config
            configMap:
              name: searxng-config
      containers:
        - image: 'searxng/searxng:2025.5.25-7a5a499'
          imagePullPolicy: IfNotPresent
          name: searxng
          #env:
          #  - name: SEARXNG_SETTINGS_FILE
          #    value: '/etc/searxng/settings.yml'
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 10
          ports:
            - containerPort: 8080
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /etc/searxng
              name: searxng-config
              subPath: settings.yml
