k3s-userapps/lobechat/casdoor.yaml
apiVersion: v1
kind: Service
metadata:
  name: casdoor-svc
  labels:
    app: casdoor
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: casdoor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casdoor-deployment
  labels:
    app: casdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casdoor
  template:
    metadata:
      labels:
        app: casdoor
    spec:
      containers:
        - name: casdoor-container
          image: casbin/casdoor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
#          volumeMounts:
#            - mountPath: /conf
#              name: conf
