k3s-userapps/lobechat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://ai-new.kirillorlov.pro"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/name: Lobechat
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=lobechat"
    gethomepage.dev/icon: "lobechat"
  name: lobechat
spec:
  rules:
  - host: ai-new.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: lobechat
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ai-new.kirillorlov.pro
    secretName: lobechat-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
  name: casdoor
spec:
  rules:
  - host: casdoor.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: casdoor-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - casdoor.kirillorlov.pro
    secretName: lobechat-tls
